# monkeybrushplusplus

./: .editorconfig  .gitexternals  .gitignore  .gitsubprojects  CMakeLists.txt  Changelog.md  README.md  _aux.cpp  todo.md  w.txt
CMake/: CPackConfig.cmake  FindEigen3.cmake  FindGLFW.cmake
build2/: Authors.txt  CMake-common-rebase.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MB.dot  MBConfig.cmake  MBTargets.cmake  Makefile  ProjectInfo.cmake  cmake_install.cmake  compile_commands.json  gitbranchandtag.cmake  gitupdateCMake-common_MB.cmake  options.cmake.in  update-gitexternal-.gitexternals.cmake
build2/doc/: Doxyfile  MB-1.9.md
build2/examples/: CTestTestfile.cmake  Makefile  assetsFiles.h  cmake_install.cmake  shaderFiles.h
build2/lib/: libmb.so.1  libmb.so.1.9.2
build2/mb/: CTestTestfile.cmake  Makefile  cmake_install.cmake  version.cpp
build2/tests/: CTestTestfile.cmake  Example  Makefile  cmake_install.cmake
demos/: Demo.hpp  Demo1.hpp
examples/: CMakeLists.txt  __TO_FIX.txt  advention.cpp  advention1.frag  advention2.frag  alienFrag.glsl  alienTexture.cpp  alphaTextures.cpp  assetsFiles.h.in  batch.cpp  brownian.cpp  bufferInstancing.cpp  cmake.buf  colorBlind.cpp  colorBlind.frag  computeTest.cpp  cubeHierarchy.cpp  cubes.cpp  cubes2.cpp  demo1.cpp  dreamVision.frag  eventDispatcher.cpp  explosion.cpp  extrude.cpp  fboExample.cpp  flatNormal.frag  flatNormal.vert  flatWave.cpp  flatWave2.frag  foo.cpp  fractalWorld.cpp  fractalWorld.frag  graniteTexture.cpp  grassScene.cpp  hatching3D.cpp  hatching3DTexture.cpp  hatchingTexture.cpp  hdr.cpp  heightmap.cpp  heightmapEarth.cpp  (+47 more)
examples/__oldFiles__/: advention.cpp  batch.cpp  bufferInstancing.cpp  colorBlind.cpp  computeTest.cpp  cubeHierarchy.cpp  cubes.cpp  fboExample.cpp  flatWave.cpp  fractalWorld.cpp  grassScene.cpp  hatching3D.cpp  hdr.cpp  heightmapEarth.cpp  heightmapTesselation.cpp  helloParametric.cpp  idraw.cpp  imageProcessing.cpp  jsonScene.cpp  kaleidoscope.cpp  kuwaharaFilter.cpp  manga.cpp  newtonFractal.cpp  normalInterpolation.cpp  oldcmlists.txt  orbitPivot.cpp  quasicrystal.cpp  registry.cpp  renderToTextureCS.cpp  sceneGraph.cpp  shaderSubroutine.cpp  space.cpp  test1.cpp  texture2DArray.cpp  xor.cpp
examples/models/: teddy.obj_
examples/shaders/: advention2.frag  alienVertex.glsl  computeTest.cs  flatWave1.frag  granite.glsl  hatching3D.frag  hatching3DFrag.glsl  hatchingFrag.glsl  hatchingVertex.glsl  hdr.frag  imageProcessing.frag  kuwaharaFilter.frag  noPerspectiveNormal.frag  passthrought.frag  phongFragment.glsl  phongTessControl.glsl  phongTessEval.glsl  phongVertex.glsl  pixelization.glsl  rayTracing.cs  renderToTexture.cs  smoothNormal.vert
examples/tess/: control.glsl  eval.glsl  fragment.glsl  vertex.glsl
lib/: CMakeLists.txt
lib/cameras/: Camera.cpp
lib/constants/: Constants.hpp
lib/core/: Color3.hpp  Framebuffer2.hpp  GLContext.hpp  GlobalState.cpp  Layer.cpp  Layer.hpp  PostProcess.cpp  VertexArray.cpp  VertexUBO.hpp
lib/extras/: CustomPingPong.inl  Ray.hpp
lib/io/: Keyboard.cpp  Keyboard.hpp
lib/lights/: AmbientLight.cpp  Light.cpp  SpotLight.cpp
lib/materials/: NormalMaterial.hpp  SimpleShadingMaterial.cpp
lib/maths/: Box2D.cpp  Clock.cpp  EulerAngle.cpp  Interpolation.hpp  (+8 more)
mb/: CMakeLists.txt  CameraComponent.hpp  Helpers.cpp  Helpers.hpp  Includes.hpp  MB.hpp  SimpleCamera.hpp  Transform2.hpp
others/: Helpers.cpp  Helpers.hpp  ScriptComponent.hpp  mouse.cpp  newContext.hpp  os.cpp  renderAlgorithm.txt  shaderParser.cpp  timer.hpp
shaders/: ClassicNoise.glsl  SimpleNoise3D.glsl
src/: CMakeLists.txt  Helpers.hpp  Includes.hpp  SimpleCamera.hpp  Stats.hpp  main.cpp
src/camera/: CMakeLists.txt
src/cameras/: Camera.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
src/constants/: Constants.hpp
src/core/: BufferAttribute.cpp  BufferAttribute.hpp  CMakeLists.txt  Color3.cpp  Color3.hpp  Color4.cpp  Color4.hpp  Framebuffer.hpp  GLContext.cpp  GLContext.hpp  GeometryFunctions.hpp  GlobalState.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  PostProcess.cpp  PostProcess.hpp  Program.cpp  Program.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexUBO.cpp  VertexUBO.hpp
src/extras/: CustomPingPong.hpp  Easing.hpp  EventDispatcher.hpp  Ray.hpp
src/lights/: AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  HemisphericLight.cpp  HemisphericLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
src/materials/: LambertMaterial.hpp  Material.cpp  Material.hpp  NormalMaterial.hpp  PostProcessMaterial.hpp  ShaderMaterial.cpp  ShaderMaterial.hpp  SimpleShadingMaterial.cpp  SimpleShadingMaterial.hpp  Uniform.hpp
src/maths/: Box2D.cpp  Box2D.hpp  Box3D.hpp  Curves.hpp  EulerAngle.cpp  EulerAngle.hpp  Interpolation.cpp  Interpolation.hpp  Mat2.cpp  Mat2.hpp  Mat3.cpp  Mat3.hpp  Mat4.cpp  Mat4.hpp  Mathf.cpp  Mathf.hpp  Quat.cpp  Quat.hpp  Sphere2D.cpp  Sphere2D.hpp  Sphere3D.hpp  Spline.cpp  Spline.hpp  Vect2.cpp  Vect2.hpp  Vect3.cpp  Vect3.hpp  Vect4.cpp  Vect4.hpp
src/models/: Capsule.hpp  Cone.hpp  Cube.hpp  Cylinder.hpp  Disc.hpp  Drawable.hpp  Prism.hpp  Torus.hpp
src/others/: Exception.cpp  Exception.hpp
src/resources/: MaterialCache.hpp  ResourceDrawable.hpp  ResourceShader.cpp  ResourceShader.hpp
src/scene/: CMakeLists.txt  Component.cpp  Component.hpp  Engine.cpp  Engine.hpp  Group.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
src/textures/: CMakeLists.txt  RenderBuffer.cpp  RenderBuffer.hpp  RenderBufferMultisampleTexture.hpp  RenderBufferTexture.hpp  Texture.cpp  Texture.hpp  Texture2D.hpp  Texture2DArray.cpp  Texture2DArray.hpp  Texture3D.hpp
src/utils/: any.hpp
tests/: CMakeLists.txt  ClockTest.cpp  Example.cpp  GeometryTest.cpp  GroupTest.cpp  NodeTest.cpp  mbTests.h
third-resources/: iniReader.cpp  iniReader.h
to_move/: RayTracerVisitor.hpp  Renderer.hpp  particles  pseudo prueba  state.hpp
tr/: CMakeLists.txt
(+296 files in other folders)
